# decoupler

./: .gitignore  Makefile  Makefile.am  README  README.md  _dcpl  clienttest.c  configure.ac  dcpl  rebuild-all  wscript
.attic/: Makefile  Makefile.lib.am  dcpl.c  dio.c
doc/: TODO  bootstrap  editor  notes.md  operations.md
include/: dio.h  gx.h
lib/: Makefile.am  dio.c  dio.h  dio_private.h
src/: Makefile.am  dcpl.c
